<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".MainActivity"
    android:background="@drawable/bg1">

    <EditText
        android:id="@+id/et_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="email"
        android:background="@drawable/bg_round"
        android:hint="@string/to"
        android:padding="12dp"
        android:textColor="#333030"
        android:textColorHint="#7436d0" />

    <EditText
        android:id="@+id/et_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_round"
        android:hint="@string/subject"
        android:padding="12dp"
        android:textColor="#333030"
        android:textColorHint="#7436d0" />

    <EditText
        android:id="@+id/et_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/bg_round"
        android:gravity="top"
        android:hint="@string/body"
        android:padding="12dp"
        android:textColor="#333030"
        android:textColorHint="#7436d0" />

    <Button
        android:id="@+id/bt_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/round"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/send"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="16sp"
        app:backgroundTint="#F39ACF" />




</LinearLayout>
