<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".message"
    android:background="@drawable/bg1">

    <EditText
        android:id="@+id/et_phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_round"
        android:hint="@string/phone"
        android:autofillHints="phone"
        android:inputType="phone"
        android:padding="12dp"
        android:textColor="#7436d0"
        android:textColorHint="#9C27B0" />

    <EditText
        android:id="@+id/et_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:background="@drawable/bg_round"
        android:gravity="top"
        android:hint="@string/msg"
        android:inputType="text"
        android:autofillHints="text"
        android:padding="12dp"
        android:textColor="#7436d0"
        android:textColorHint="#9C27B0" />

    <Button
        android:id="@+id/bt_send"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/send"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="16sp"
        app:backgroundTint="#F39ACF" />


</LinearLayout>
