<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="332dp"
        android:layout_height="462dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="70dp"
        android:background="#1EFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224">


        <Button
            android:id="@+id/button_reg"
            android:layout_width="148dp"
            android:layout_height="44dp"
            android:background="@drawable/round"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textIsSelectable="false"
            android:textSize="14sp"
            app:backgroundTint="#F39ACF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.897" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="234dp"
            android:layout_height="51dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/welcome_register"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/person_email"
            android:layout_width="247dp"
            android:layout_height="44dp"
            android:drawableLeft="@drawable/ic_action_user"
            android:ems="10"
            android:gravity="clip_horizontal|center|start"
            android:hint="@string/email"
            android:autofillHints="email"
            android:inputType="textEmailAddress"
            android:textColorHint="#FFFFFF"
            android:textSize="16sp"
            app:backgroundTint="#99F39ACF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.188"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.318" />

        <EditText
            android:id="@+id/person_pass1"
            android:layout_width="247dp"
            android:layout_height="44dp"
            android:drawableLeft="@drawable/ic_action_pass"
            android:ems="10"
            android:hint="@string/pwd"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:textColorHint="#FFFFFF"
            android:textSize="16sp"
            app:backgroundTint="#B2F39ACF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.188"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/person_pass2"
            android:layout_width="247dp"
            android:layout_height="44dp"
            android:drawableLeft="@drawable/ic_action_pass"
            android:ems="10"
            android:hint="@string/confirm_pwd"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:textColorHint="#FFFFFF"
            android:textSize="16sp"
            app:backgroundTint="#B2F39ACF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.188"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.691" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
